search fix on mobile

--- a/src/client/app/components/shared/search/search.component.scss
+++ b/src/client/app/components/shared/search/search.component.scss
@@ -135,3 +135,9 @@
   h6 {
     color: white;
   }
+  @media screen and (max-width: 720px) {
+    .search-container{
+     position:absolute;
+    top:125px;
+    }
+  }
